tests/miniJava/neg/005276_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] this java ( ) { return 0 ; } }
